# imersio

./: Cargo.toml
.github/workflows/: ci-build-and-test.yml  ci-check-code-format.yml  general.yml
imersio/: Cargo.toml
imersio-sip/: Cargo.toml  TODO
imersio-sip/benches/: messages.rs  uris.rs
imersio-sip/fuzz/: Cargo.toml
imersio-sip/fuzz/fuzz_targets/: fuzz_target_sip_messages.rs
imersio-sip/src/: builder_helper.rs  common.rs  error.rs  lib.rs  method.rs  parser.rs  reason.rs  request.rs  response.rs  uri.rs  utils.rs  version.rs
imersio-sip/src/common/: accept_encoding.rs  accept_language.rs  accept_parameter.rs  accept_range.rs  alert.rs  algorithm.rs  auth_parameter.rs  authentication_info.rs  call_id.rs  call_info.rs  call_info_parameter.rs  challenge.rs  comma_separated_value_collection.rs  contact.rs  contact_parameter.rs  content_encoding.rs  content_language.rs  credentials.rs  disposition_parameter.rs  disposition_type.rs  domain_uri.rs  error_uri.rs  from_parameter.rs  generic_parameter.rs  handling.rs  header_value_collection.rs  media_parameter.rs  media_range.rs  media_type.rs  message_qop.rs  method.rs  mod.rs  name_address.rs  option_tag.rs  priority.rs  product.rs  protocol.rs  reason.rs  retry_parameter.rs  route.rs  (+15 more)
imersio-sip/src/header/: accept_encoding_header.rs  accept_header.rs  accept_language_header.rs  alert_info_header.rs  allow_header.rs  authentication_info_header.rs  authorization_header.rs  call_id_header.rs  call_info_header.rs  contact_header.rs  content_disposition_header.rs  content_encoding_header.rs  content_language_header.rs  content_length_header.rs  content_type_header.rs  cseq_header.rs  date_header.rs  error_info_header.rs  expires_header.rs  from_header.rs  generic_header.rs  header_accessor.rs  in_reply_to_header.rs  max_forwards_header.rs  mime_version_header.rs  min_expires_header.rs  mod.rs  organization_header.rs  parser.rs  priority_header.rs  proxy_authenticate_header.rs  proxy_authorization_header.rs  proxy_require_header.rs  record_route_header.rs  tests.rs
imersio-sip/src/headers/: accept_encoding_header.rs  accept_header.rs  accept_language_header.rs  alert_info_header.rs  allow_header.rs  authentication_info_header.rs  authorization_header.rs  call_id_header.rs  call_info_header.rs  contact_header.rs  content_disposition_header.rs  content_encoding_header.rs  content_language_header.rs  content_length_header.rs  content_type_header.rs  cseq_header.rs  date_header.rs  error_info_header.rs  expires_header.rs  from_header.rs  generic_header.rs  header.rs  header_accessor.rs  in_reply_to_header.rs  max_forwards_header.rs  mime_version_header.rs  min_expires_header.rs  mod.rs  organization_header.rs  parser.rs  priority_header.rs  proxy_authenticate_header.rs  proxy_authorization_header.rs  proxy_require_header.rs  record_route_header.rs  reply_to_header.rs  require_header.rs  retry_after_header.rs  route_header.rs  server_header.rs  (+9 more)
imersio-sip/src/messages/: message.rs  mod.rs  request.rs  response.rs
imersio-sip/src/uri/: absolute_uri.rs  host_port.rs  mod.rs  parser.rs  sip_uri.rs  uri_headers.rs  uri_parameters.rs  uri_scheme.rs  user_info.rs
imersio-sip/src/uris/: absolute_uri.rs  host.rs  mod.rs  parser.rs  sip_uri.rs  uri.rs  uri_header.rs  uri_headers.rs  uri_parameter.rs  uri_parameters.rs  uri_scheme.rs  user_info.rs
imersio/src/: config.rs  main.rs
partial_eq_refs/: Cargo.toml
partial_eq_refs/src/: lib.rs
