[workspace]
members = ["imersio-sip", "partial_eq_refs"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/ghismary/imersio"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Ghislain MARY <ghislain@ghislainmary.fr>"]
rust-version = "1.70"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
bytes = "1.6"
chrono = "0.4"
claims = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }
derive_more = { version = "1.0", features = ["deref", "display", "from", "into_iterator", "is_variant"] }
derive-partial-eq-extras = "0.2"
itertools = "0.13"
nom = "7.1"
partial_eq_refs = { path = "partial_eq_refs" }
quote = "1.0"
syn = "2.0"
thiserror = "1.0"
