[workspace]
members = ["imersio", "imersio-sip", "imersio-sip/fuzz"]
default-members = ["imersio", "imersio-sip"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/ghismary/imersio"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Ghislain MARY <ghislain@ghislainmary.fr>"]
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
chrono = "0.4"
claims = "0.8"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
derive_more = { version = "2.1", features = ["deref", "deref_mut", "display", "from", "into_iterator", "is_variant"] }
derive-partial-eq-extras = "0.2"
itertools = "0.14"
libfuzzer-sys = "0.4"
nom = "8.0"
nom-language = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49", features = ["fs", "macros", "net", "rt", "rt-multi-thread", "signal"] }
toml = { version = "0.9", features = ["serde"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = "0.3"
