[package]
name = "imersio-sip"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A generator and parser of SIP requests and responses."
keywords = ["sip"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
bytes = "1.6"
chrono = "0.4"
derive_more = "0.99"
derive-partial-eq-extras = "0.2"
itertools = "0.13"
nom = "7.1"
partial_eq_refs = { path = "../partial_eq_refs" }
thiserror = "1.0"

[dev-dependencies]
claims = "0.7"
