[package]
name = "imersio"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A SIP proxy."
keywords = ["sip"]

[lints]
workspace = true

[dependencies]
clap.workspace = true
imersio-sip = { path = "../imersio-sip" }
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true