[package]
name = "partial_eq_refs"
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true

[lints.rust]
unsafe_code = "forbid"
